fixed overflowing player count

--- a/styles.css
+++ b/styles.css
@@ -1701,7 +1701,7 @@ a.post_link.text:hover {
 
 #nb_games_in_play strong,
 #nb_connected_players strong {
-    font-size: 3.5vw !important;
+    font-size: 4rem !important;
     color: var(--defaultWhite) !important;
 }
 
